# groundhog

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/: index.md
docs/api/: cli.md  decorators.md  environment_variables.md  function.md  future.md
docs/concepts/: functions-and-harnesses.md  pep723.md  remote-execution.md  serialization.md
docs/examples/: academy.md  configuration.md  dependencies.md  hello-world.md  imported_function.md  index.md  local.md  methods.md  parallel-execution.md  parameterized-harness.md  pytorch_custom_index.md
docs/getting-started/: installation.md  quickstart.md
examples/: 00_hello_world.py  README.md  __init__.py  configuration.py  configuration_precedence.py  error_handling.py  hello-tutorial.py  hello_dependencies.py  hello_gpu.py  hello_serialization.py  hello_world.py  import_order_gotcha.py  importing_functions.py  local_execution.py  methods.py  parallel_execution.py  parameterized_harness.py  pytorch_custom_index.py
examples/academy/: README.md  agent.py  compute.py
examples/advanced/: README.md  (+2 more)
scripts/: generate_cli_docs.sh  runner.py
tests/: conftest.py  test_app.py  test_compute.py  test_configuration.py  test_console_cancellation.py  test_decorators.py  test_endpoints.py  test_fixtures.py  test_function.py  test_future.py  test_harness.py  test_import_safety.py  test_mark_import_safe.py  test_method.py  test_pep723.py  test_pep723_integration.py  test_runner.py  test_serialization.py  test_templating.py
(+33 files in other folders)
