[project]
name = "groundhog-hpc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["globus-compute-sdk>=3.12.0", "typer>=0.16.1"]

[project.scripts]
hog = "groundhog_hpc.app.main:app"

[build-system]
requires = ["uv_build>=0.8.5,<0.9.0"]
build-backend = "uv_build"


[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pytest>=8.4.1",
    "ruff>=0.12.11",
]


[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]  # line length handled by pre-commit hook
